# MetaHouseMatter

./: .clangd  .gitignore  CMakeLists.txt  README.md  json assccessory.txt  partitions.csv  sdkconfig  sdkconfig.old  usbipd.txt
main/: CMakeLists.txt  aggregator.cpp  app_main.cpp  bridge_node.cpp  callback_event.cpp  door_lock.cpp  generic_switch.cpp  idf_component.yml  light_accessory.cpp  on_off_light.cpp  window_covering.cpp
main/accessories/door_accessory/: door_accessory.cpp  door_accessory.hpp
main/accessories/fan_accessory/: fan_accessory.cpp  fan_accessory.hpp
main/accessories/light_accessory/: light_accessory.cpp  light_accessory.hpp
main/accessories/manager_accessory/: manager_accessory.cpp  manager_accessory.hpp
main/accessories/plugin_accessory/: plugin_accessory.cpp  plugin_accessory.hpp
main/accessories/switch_accessory/: switch_accessory.cpp  switch_accessory.hpp
main/accessories/window_accessory/: window_accessory.cpp  window_accessory.hpp
main/accesspoint/url_handlers/: accessories_handler.cpp  command_handler.cpp  file_read_handler.cpp  helper_handler.cpp  helper_handler.hpp  not_found_handler.cpp  url_handlers.hpp  url_structure.hpp  wifi_handler.cpp
main/accesspoint/webserver/: webserver.cpp  webserver.hpp
main/cluster/basic_information/: basic_information.cpp  basic_information.hpp
main/cluster/bridged_device_basic_information/: bridged_device_basic_information.cpp  (+1 more)
main/include/: base_accessory.hpp  bridge_node.hpp  callback_event.hpp  checker.hpp  generic_switch.hpp  light_accessory.hpp  on_off_light.hpp  on_off_plugin.hpp
(+24 files in other folders)
